# mudata

./: .codecov.yaml  .codecov.yml  .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml
.github/workflows/: build.yaml  codecov.yml  dev.yml  pythonpackage.yml  release.yaml  release.yml  test.yaml
docs/: accessors.md  api.md  conf.py  contributing.md  index.md  install.md  nuances.md  references.bib
docs/_templates/autosummary/: class-accessor.rst  class.rst
docs/extensions/: member_type.py  skip_private_bases.py
docs/io/: input.md  mudata.md  output.md  spec.md
docs/notebooks/: annotations_management.ipynb  axes.ipynb  nuances.ipynb  quickstart_mudata.ipynb
docs/source/: changelog.rst  conf.py  index.rst  install.rst  nuances.rst
docs/source/api/: index.rst
docs/source/io/: input.rst  mudata.rst  output.rst  spec.rst
docs/source/notebooks/: annotations_management.ipynb  axes.ipynb  nuances.ipynb  quickstart_mudata.ipynb  requirements.txt
mudata/: __init__.py
mudata/_core/: config.py  file_backing.py  io.py  merge.py  mudata.py  repr.py  to_.py  utils.py
src/mudata/: __init__.py  version.py
src/mudata/_core/: compat.py  config.py  extensions.py  file_backing.py  io.py  merge.py  mudata.py  repr.py  settings.py  to_.py  utils.py  views.py
src/mudata/acc/: __init__.py  acc-schema-v1.json
src/mudata/tests/: reference.py
tests/: conftest.py  test_accessors.py  test_axis_-1.py  test_deprecation_decorator.py  test_extensions.py  test_from_to.py  test_io.py  test_io_backwards_compat.py  test_merge.py  test_mod_order.py  test_nested.py  test_nullable.py  test_obs_var.py  test_pandas_utils.py  test_pull_push.py  test_repr.py  test_to_.py  test_update.py  test_update_axis_1.py  test_view_copy.py
tests/data/archives/: README.md
tests/data/archives/v0.1.2/: create_testfiles.py  mdata_axis0.h5mu  mudata.h5mu  pylock.toml
tests/data/archives/v0.2.4/: mdata_axis0.h5mu  mdata_axis1.h5mu  pylock.toml
tests/data/archives/v0.3.10/: mdata_axis0.h5mu  mdata_axis1.h5mu  pylock.toml
